--- a/src/assets/devices/iphone_x.scss
+++ b/src/assets/devices/iphone_x.scss
@@ -14,44 +14,78 @@
         left: 6.8%;
 
         width: 81.5%;
-        height: 35px;
+        min-height: 35px;
+        height: auto;
 
         padding: 8px;
         border-radius: 9px;
         background-color: rgba(255, 255, 255, 0.9);
-    }
 
-    .heading {
-        display: flex;
-        align-items: center;
+        .heading {
+            display: flex;
+            align-items: center;
 
-        font-size: 11px;
-        color: #676767;
+            font-size: 11px;
+            color: #676767;
 
-        .application-icon {
-            width: 15px;
-            height: 15px;
+            .application-icon {
+                width: 15px;
+                height: 15px;
 
-            background-color: $black;
-            border-radius: 5px;
+                background-color: $black;
+                border-radius: 5px;
+            }
+
+            .application-name {
+                margin-left: 5px;
+                text-transform: uppercase;
+            }
+
+            .application-time {
+                position: absolute;
+                right: 15px;
+            }
         }
 
-        .application-name {
-            margin-left: 5px;
-            text-transform: uppercase;
+        .content {
+            font-size: 12px;
+            color: $black;
+            margin-top: 5px;
+
+            .title {
+                display: flex;
+            }
         }
 
-        .application-time {
-            position: absolute;
-            right: 15px;
+        &.dark-mode {
+            background-color: rgba(53, 53, 53, 0.9);
+
+            .heading {
+                color: #b1b1b1;
+
+                .application-icon {
+                    background-color: $white;
+                }
+            }
+
+            .content {
+                color: $white;
+            }
         }
-    }
 
-    .title {
-        display: flex;
-        margin-top: 5px;
-        font-size: 12px;
+        &.expanded-mode {
+            .content {
+                .title {
+                    font-weight: bold;
+                }
 
-        color: $black;
+                .body {
+                    display: -webkit-box;
+                    -webkit-line-clamp: 4;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                }
+            }
+        }
     }
 }
