Modify class-names with prefix 'vpnp-' (vue-push-notification-preview)

--- a/src/assets/devices/pixel_4.scss
+++ b/src/assets/devices/pixel_4.scss
@@ -1,14 +1,14 @@
 @import '../variables';
 
-.pixel_4 {
+.vpnp-pixel_4 {
     font-family: sans-serif;
 
-    .notification {
+    .vpnp-notification {
         position: absolute;
         top: 52%;
-        left: 5.5%;
+        left: 5.4%;
 
-        width: 79%;
+        width: 79.2%;
         min-height: 15px;
         height: auto;
 
@@ -16,14 +16,14 @@
         border-radius: 5px;
         background-color: $white;
 
-        .heading {
+        .vpnp-heading {
             display: flex;
             align-items: center;
 
             font-size: 12px;
             color: #565656;
 
-            .application-icon {
+            .vpnp-application-icon {
                 width: 15px;
                 height: 15px;
 
@@ -31,43 +31,43 @@
                 border-radius: 50%;
             }
 
-            .application-name {
+            .vpnp-application-name {
                 margin-left: 10px;
             }
 
-            .application-time-container {
+            .vpnp-application-time-container {
                 margin-left: 10px;
 
-                .application-time-separator {
+                .vpnp-application-time-separator {
                     font-weight: bold;
                 }
 
-                .application-time {
+                .vpnp-application-time {
                     margin-left: 10px;
                 }
             }
         }
 
-        .content {
+        .vpnp-content {
             color: $black;
             font-size: 13px;
             margin-top: 10px;
 
-            .title {
+            .vpnp-title {
                 display: flex;
             }
         }
 
-        &.light-mode {
-            &.expanded-mode {
-                .content {
+        &.vpnp-light-mode {
+            &.vpnp-expanded-mode {
+                .vpnp-content {
                     color: #3b3b3b;
 
-                    .title {
+                    .vpnp-title {
                         font-weight: bold;
                     }
 
-                    .body {
+                    .vpnp-body {
                         display: -webkit-box;
                         -webkit-line-clamp: 4;
                         -webkit-box-orient: vertical;
@@ -77,28 +77,28 @@
             }
         }
 
-        &.dark-mode {
+        &.vpnp-dark-mode {
             background-color: $black;
 
-            .heading {
+            .vpnp-heading {
                 color: $white;
 
-                .application-icon {
+                .vpnp-application-icon {
                     background-color: $white;
                 }
             }
 
-            .content {
+            .vpnp-content {
                 color: $white;
             }
 
-            &.expanded-mode {
-                .content {
-                    .title {
+            &.vpnp-expanded-mode {
+                .vpnp-content {
+                    .vpnp-title {
                         font-weight: bold;
                     }
 
-                    .body {
+                    .vpnp-body {
                         color: #e6e6e6;
                         display: -webkit-box;
                         -webkit-line-clamp: 4;
@@ -108,7 +108,6 @@
                 }
             }
         }
-
 
     }
 }
