--- a/src/assets/devices/iphone_x.scss
+++ b/src/assets/devices/iphone_x.scss
@@ -1,9 +1,9 @@
 @import '../variables';
 
-.iphone_x {
+.vpnp-iphone_x {
     font-family: sans-serif;
 
-    .notification {
+    .vpnp-notification {
         position: absolute;
         top: 45.6%;
         left: 6.8%;
@@ -16,14 +16,14 @@
         border-radius: 9px;
         background-color: rgba(255, 255, 255, 0.9);
 
-        .heading {
+        .vpnp-heading {
             display: flex;
             align-items: center;
 
             font-size: 11px;
             color: #676767;
 
-            .application-icon {
+            .vpnp-application-icon {
                 width: 15px;
                 height: 15px;
 
@@ -31,50 +31,50 @@
                 border-radius: 5px;
             }
 
-            .application-name {
+            .vpnp-application-name {
                 margin-left: 5px;
                 text-transform: uppercase;
             }
 
-            .application-time {
+            .vpnp-application-time {
                 position: absolute;
                 right: 15px;
             }
         }
 
-        .content {
+        .vpnp-content {
             font-size: 12px;
             color: $black;
             margin-top: 5px;
 
-            .title {
+            .vpnp-title {
                 display: flex;
             }
         }
 
-        &.dark-mode {
+        &.vpnp-dark-mode {
             background-color: rgba(53, 53, 53, 0.9);
 
-            .heading {
+            .vpnp-heading {
                 color: #b1b1b1;
 
-                .application-icon {
+                .vpnp-application-icon {
                     background-color: $white;
                 }
             }
 
-            .content {
+            .vpnp-content {
                 color: $white;
             }
         }
 
-        &.expanded-mode {
-            .content {
-                .title {
+        &.vpnp-expanded-mode {
+            .vpnp-content {
+                .vpnp-title {
                     font-weight: bold;
                 }
 
-                .body {
+                .vpnp-body {
                     display: -webkit-box;
                     -webkit-line-clamp: 4;
                     -webkit-box-orient: vertical;
