Emit event 'toggle-notification' on 'click' event mapped on: app-icon on Iphone and chevron-icons on Android

--- a/src/assets/devices/iphone_x.scss
+++ b/src/assets/devices/iphone_x.scss
@@ -53,6 +53,7 @@
                         width: $vnpn-iphone_x-notification-application-icon-width;
                         height: $vnpn-iphone_x-notification-application-icon-height;
 
+                        cursor: $vnpn-iphone_x-notification-toggler-cursor;
                         background-color: $vnpn-iphone_x-notification-application-icon-background-color;
                         border-radius: $vnpn-iphone_x-notification-application-icon-border-radius;
                     }
