--- a/src/assets/variables/iphone_x.scss
+++ b/src/assets/variables/iphone_x.scss
@@ -28,6 +28,9 @@ $vnpn-iphone_x-notification-application-icon-height: 15px;
 $vnpn-iphone_x-notification-application-icon-background-color: $black;
 $vnpn-iphone_x-notification-application-icon-border-radius: 5px;
 
+//-- NOTIFICATION TOGGLES --//
+$vnpn-iphone_x-notification-toggler-cursor: pointer;
+
 
 //-- NOTIFICATION CONTENT --//
 $vnpn-iphone_x-notification-content-font-size: 12px;
