--- a/src/assets/variables/pixel_4.scss
+++ b/src/assets/variables/pixel_4.scss
@@ -38,6 +38,16 @@ $vnpn-pixel_4-notification-content-font-size: 13px;
 $vnpn-pixel_4-notification-content-color: $black;
 
 
+//-- NOTIFICATION CONTENT TEXT --//
+$vnpn-pixel_4-notification-content-text-min-width: 80%;
+$vnpn-pixel_4-notification-content-text-width: 100%;
+
+
+//-- NOTIFICATION CONTENT IMAGE --//
+$vnpn-pixel_4-notification-content-image-width: 100%;
+$vnpn-pixel_4-notification-content-image-height: 125px;
+$vnpn-pixel_4-notification-content-image-border-radius: 2px;
+
 //-- EXPANDED SIZE: NOTIFICATION TITLE --//
 $vnpn-pixel_4-notification-expanded-size-title-font-weight: bold;
 
