--- a/src/assets/devices/iphone_x.scss
+++ b/src/assets/devices/iphone_x.scss
@@ -77,6 +77,7 @@
             .vpnp-notification-content {
                 display: flex;
                 flex-direction: row;
+                justify-content: space-between;
                 margin-top: 5px;
 
                 font-size: $vnpn-iphone_x-notification-content-font-size;
